portal.soilmate.ai aka 'Ukraine' env (#307)
* Deploy to instance in EU to serve Planet data

* Run also publish thread

* Revert "Run also publish thread"

This reverts commit 57f9269d1c87f9d10734dd1867a4b155c179ea92.

* SSL

* SSL

* SSL

* Set zoom level

* Handle Planet rasters

* Ease zoom level

* Increase tiles generation timeout

* Pass env vars to prod build

* Pass env vars to prod build

* Pass env vars to prod build

* added ability to process skysat (#268)

Co-authored-by: Michael Yushchuk <m.yushchuk@quantumobile.com>

* Ukraine skysat (#269)

* added ability to process skysat

* added visual skysat processing

Co-authored-by: Michael Yushchuk <m.yushchuk@quantumobile.com>

* fix path to visual skysat

* added alpha channel (#271)

Co-authored-by: Michael Yushchuk <m.yushchuk@quantumobile.com>

* Increase maxZoom to 18

* Increase maxZoom to 17

* Increase maxZoom to 17

* Enable background NB execution

* 19080: update path for https://soilmateukraine.quantumobile.co/

* 19080: fix BASE_CONTAINER_NAME

* 19843: fix password for landcover notebook

* Change domain to demo.soilmate.ai

* Change domain to demo.soilmate.ai

* Revert "Change domain to demo.soilmate.ai"

This reverts commit 554ec91f55857f7b2ca3749df23ec08bf5284f80.

* Change domain to demo.soilmate.ai

* Change domain to portal.soilmate.ai

Co-authored-by: adolgarev <a.dolgarev@quantumobile.com>
Co-authored-by: Michael Yushchuk <ymv@protonmail.com>
Co-authored-by: Michael Yushchuk <m.yushchuk@quantumobile.com>
Co-authored-by: EC2 Default User <ec2-user@ip-172-31-39-219.eu-central-1.compute.internal>

--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -5,9 +5,38 @@ upstream webapplication {
 }
 
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    listen 80;
+    server_name soilmateukraine.quantumobile.co;
+
+    location / {
+        return 301 https://portal.soilmate.ai$request_uri;
+    }
+}
+
+server {
+    listen 80;
+    server_name demo.soilmate.ai;
+
+    location / {
+        return 301 https://portal.soilmate.ai$request_uri;
+    }
+}
+
+server {
+    listen 80;
+    server_name portal.soilmate.ai;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name  portal.soilmate.ai;
+
+    ssl_certificate /etc/letsencrypt/live/portal.soilmate.ai/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/portal.soilmate.ai/privkey.pem;
 
     gzip on;
     gzip_types      text/plain application/xml application/javascript;
