portal.soilmate.ai aka 'Ukraine' env (#307)
* Deploy to instance in EU to serve Planet data

* Run also publish thread

* Revert "Run also publish thread"

This reverts commit 4ec67adc8e82827b91a81df5658192262d163465.

* SSL

* SSL

* SSL

* Set zoom level

* Handle Planet rasters

* Ease zoom level

* Increase tiles generation timeout

* Pass env vars to prod build

* Pass env vars to prod build

* Pass env vars to prod build

* added ability to process skysat (#268)

Co-authored-by: Michael Yushchuk <m.yushchuk@quantumobile.com>

* Ukraine skysat (#269)

* added ability to process skysat

* added visual skysat processing

Co-authored-by: Michael Yushchuk <m.yushchuk@quantumobile.com>

* fix path to visual skysat

* added alpha channel (#271)

Co-authored-by: Michael Yushchuk <m.yushchuk@quantumobile.com>

* Increase maxZoom to 18

* Increase maxZoom to 17

* Increase maxZoom to 17

* Enable background NB execution

* 19080: update path for https://soilmateukraine.quantumobile.co/

* 19080: fix BASE_CONTAINER_NAME

* 19843: fix password for landcover notebook

* Change domain to demo.soilmate.ai

* Change domain to demo.soilmate.ai

* Revert "Change domain to demo.soilmate.ai"

This reverts commit b4ee3d052fa2910e2530d7996d562dc8bcb804ac.

* Change domain to demo.soilmate.ai

* Change domain to portal.soilmate.ai

Co-authored-by: adolgarev <a.dolgarev@quantumobile.com>
Co-authored-by: Michael Yushchuk <ymv@protonmail.com>
Co-authored-by: Michael Yushchuk <m.yushchuk@quantumobile.com>
Co-authored-by: EC2 Default User <ec2-user@ip-172-31-39-219.eu-central-1.compute.internal>

--- a/jupyter/Landcover/jupyter_notebook_config.json
+++ b/jupyter/Landcover/jupyter_notebook_config.json
@@ -1,5 +1,5 @@
 {
     "NotebookApp": {
-        "password": "argon2:$argon2id$v=19$m=10240,t=10,p=8$YQ047LTtnB0jm6M54wwGGA$dFwyEOesYv/umSRcU7yR+g"
+        "password": "argon2:$argon2id$v=19$m=10240,t=10,p=8$4VFNDFzy2KFcRPQa1ew+vA$CEQdsgA1R1fq+Ce77hxiZA"
     }
 }
