21079&21139/comment publishers(temporary till new algorithm)

--- a/k8s/sip-deploy.yaml
+++ b/k8s/sip-deploy.yaml
@@ -218,7 +218,8 @@ spec:
       containers:
         - name: web-application
           image: registry.quantumobile.co/sip-web-application:latest
-          imagePullPolicy: "Always"
+          # imagePullPolicy: "Always"
+          imagePullPolicy: "IfNotPresent"
           command: ['/bin/bash', '-c', 'exec invoke run-prod']
           ports:
           - containerPort: 9000
@@ -280,7 +281,8 @@ spec:
       containers:
       - name: frontend
         image: registry.quantumobile.co/sip-web-server:latest
-        imagePullPolicy: "Always"
+        # imagePullPolicy: "Always"
+        imagePullPolicy: "IfNotPresent"
         env:
           - name: MAPBOX_ACCESS_TOKEN
             valueFrom:
@@ -324,7 +326,8 @@ spec:
       containers:
         - name: notebook-handler
           image: registry.quantumobile.co/sip-web-application:latest
-          imagePullPolicy: "Always"
+          # imagePullPolicy: "Always"
+          imagePullPolicy: "IfNotPresent"
           command: ['/bin/bash', '-c', 'exec invoke run-notebook-executor-k8s']
           env:
             - name: POSTGRES_USER
@@ -350,48 +353,48 @@ spec:
           persistentVolumeClaim:
             claimName: sip-data-pvc
 ---
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: publisher
-  namespace: sip
-spec:
-  selector:
-    matchLabels:
-      app: publisher
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: publisher
-    spec:
-      restartPolicy: "Always"
-      containers:
-        - name: publisher
-          image: registry.quantumobile.co/sip-web-application:latest
-          imagePullPolicy: "Always"
-          command: ['/bin/bash', '-c', 'exec invoke run-publisher-k8s']
-          env:
-            - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: sip-secret
-                  key: postgresname
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: sip-secret
-                  key: postgrespassword
-          envFrom:
-              - configMapRef:
-                  name: app-config
-          volumeMounts:
-              - name: sip-data-volume
-                mountPath: /data
-      imagePullSecrets:
-        - name: regcred
-      volumes:
-        - name: sip-data-volume
-          persistentVolumeClaim:
-            claimName: sip-data-pvc
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: publisher
+#   namespace: sip
+# spec:
+#   selector:
+#     matchLabels:
+#       app: publisher
+#   strategy:
+#     type: Recreate
+#   template:
+#     metadata:
+#       labels:
+#         app: publisher
+#     spec:
+#       restartPolicy: "Always"
+#       containers:
+#         - name: publisher
+#           image: registry.quantumobile.co/sip-web-application:latest
+#           imagePullPolicy: "Always"
+#           command: ['/bin/bash', '-c', 'exec invoke run-publisher-k8s']
+#           env:
+#             - name: POSTGRES_USER
+#               valueFrom:
+#                 secretKeyRef:
+#                   name: sip-secret
+#                   key: postgresname
+#             - name: POSTGRES_PASSWORD
+#               valueFrom:
+#                 secretKeyRef:
+#                   name: sip-secret
+#                   key: postgrespassword
+#           envFrom:
+#               - configMapRef:
+#                   name: app-config
+#           volumeMounts:
+#               - name: sip-data-volume
+#                 mountPath: /data
+#       imagePullSecrets:
+#         - name: regcred
+#       volumes:
+#         - name: sip-data-volume
+#           persistentVolumeClaim:
+#             claimName: sip-data-pvc
