--- a/k8s/sip-deploy.yaml
+++ b/k8s/sip-deploy.yaml
@@ -353,48 +353,49 @@ spec:
           persistentVolumeClaim:
             claimName: sip-data-pvc
 ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: publisher
-#   namespace: sip
-# spec:
-#   selector:
-#     matchLabels:
-#       app: publisher
-#   strategy:
-#     type: Recreate
-#   template:
-#     metadata:
-#       labels:
-#         app: publisher
-#     spec:
-#       restartPolicy: "Always"
-#       containers:
-#         - name: publisher
-#           image: registry.quantumobile.co/sip-web-application:latest
-#           imagePullPolicy: "Always"
-#           command: ['/bin/bash', '-c', 'exec invoke run-publisher-k8s']
-#           env:
-#             - name: POSTGRES_USER
-#               valueFrom:
-#                 secretKeyRef:
-#                   name: sip-secret
-#                   key: postgresname
-#             - name: POSTGRES_PASSWORD
-#               valueFrom:
-#                 secretKeyRef:
-#                   name: sip-secret
-#                   key: postgrespassword
-#           envFrom:
-#               - configMapRef:
-#                   name: app-config
-#           volumeMounts:
-#               - name: sip-data-volume
-#                 mountPath: /data
-#       imagePullSecrets:
-#         - name: regcred
-#       volumes:
-#         - name: sip-data-volume
-#           persistentVolumeClaim:
-#             claimName: sip-data-pvc
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: publisher
+  namespace: sip
+spec:
+  selector:
+    matchLabels:
+      app: publisher
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app: publisher
+    spec:
+      restartPolicy: "Always"
+      containers:
+        - name: publisher
+          image: registry.quantumobile.co/sip-web-application:latest
+          # imagePullPolicy: "Always"
+          imagePullPolicy: "IfNotPresent"
+          command: ['/bin/bash', '-c', 'exec invoke run-publisher-k8s']
+          env:
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: sip-secret
+                  key: postgresname
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: sip-secret
+                  key: postgrespassword
+          envFrom:
+              - configMapRef:
+                  name: app-config
+          volumeMounts:
+              - name: sip-data-volume
+                mountPath: /data
+      imagePullSecrets:
+        - name: regcred
+      volumes:
+        - name: sip-data-volume
+          persistentVolumeClaim:
+            claimName: sip-data-pvc
