--- a/webapplication/uwsgi.ini
+++ b/webapplication/uwsgi.ini
@@ -7,6 +7,10 @@ static-map = /static=/code/static
 static-map = /media=/code/media
 
 master = true
-max-requests = 5000
-processes = 2
+single-interpreter = true
+max-requests = 1000
+max-worker-lifetime = 3600
+reload-on-rss = 2048
+worker-reload-mercy = 60
+processes = 16
 touch-reload = /code/uwsgi.ini
