21616/change logo & favicon

--- a/webviewer/public/manifest.json
+++ b/webviewer/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SoilMate",
-  "name": "SoilMate",
+  "short_name": "Geoap",
+  "name": "Geoap",
   "icons": [
     {
       "src": "assets/favicon/android-chrome-192x192.png",
