--- a/webapplication/requirements.txt
+++ b/webapplication/requirements.txt
@@ -1,6 +1,7 @@
 Django==3.1
 django-filter==2.4.0
-django-rest-auth==0.9.5
+dj-rest-auth==3.0.0
+django-allauth==0.52.0
 djangorestframework==3.12.1
 django-flat-json-widget==0.1.1
 django-admin-rangefilter==0.6.3
