--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -14,6 +14,7 @@ services:
       context: ./webapplication
       dockerfile: Dockerfile
     command: /bin/bash -c "exec invoke test"
+    env_file: webapplication/.env.test.local
     environment:
       - DJANGO_SETTINGS_MODULE=sip.settings-test
       - POSTGRES_DB=sip_db
