--- a/webapplication/requirements.txt
+++ b/webapplication/requirements.txt
@@ -7,6 +7,7 @@ django-flat-json-widget==0.1.1
 django-admin-rangefilter==0.6.3
 drf-yasg==1.20.0
 uWSGI==2.0.18
+coverage==6.3.2
 
 psycopg2==2.8.5
 invoke==1.4.1
