--- a/docker-compose-lviv.yml
+++ b/docker-compose-lviv.yml
@@ -1,56 +1,63 @@
-version: "3"
+version: "3.5"
 services:
+
   db:
     image: postgis/postgis:13-3.0
     volumes:
       - ./db:/var/lib/postgresql/data
-    expose:
-      - 5432
-    ports:
-      - "5433:5432"
     environment:
       - POSTGRES_DB=sip_db
       - POSTGRES_USER=sip
       - POSTGRES_PASSWORD=eiJ2koo6
+    networks:
+      - sip
+    restart: on-failure
 
   webapplication:
     build:
       context: ./webapplication
       dockerfile: prod.Dockerfile
-    command: /bin/bash -c "exec invoke run-prod"
+    volumes:
+      - ./webapplication:/code
+      - /mnt/storage/geoap_data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DJANGO_SETTINGS_MODULE=sip.settings-lviv
       - POSTGRES_DB=sip_db
       - POSTGRES_USER=sip
       - POSTGRES_PASSWORD=eiJ2koo6
-    volumes:
-      - ./webapplication:/code
-      - /mnt/storage/geoap_data:/data
-      - /var/run/docker.sock:/var/run/docker.sock
+    command: /bin/bash -c "exec invoke run-prod"
     depends_on:
       - db
-
-  webviewer:
-    image: node:14.5.0
-    volumes:
-      - ./webviewer:/client
-    working_dir: /client
-    expose:
-      - 3000
-    ports:
-      - "3000:3000"
-    command: bash -c "npm install && npm start"
-    depends_on:
-      - webserver
+    networks:
+      - sip
+    restart: on-failure
 
   webserver:
-    image: nginx:1.19.3
+    build:
+      context: ./
+      dockerfile: ./webserver/prod.Dockerfile
+      args:
+        REACT_APP_HOTJAR_ID:
+        REACT_APP_HOTJAR_SV:
+        REACT_APP_EMAILJS_SERVICE_ID:
+        REACT_APP_EMAILJS_TEMPLATE_ID:
+        REACT_APP_EMAILJS_USER_ID:
+        REACT_APP_AUTOLOGIN:
+        REACT_APP_AUTOPASSWORD:
     volumes:
-      - ./webserver/default.conf:/etc/nginx/conf.d/default.conf
       - /mnt/storage/geoap_data:/data
     expose:
-      - 9000
+      - 8080
     ports:
-      - "9000:9000"
+      - "8080:8080"
     depends_on:
       - webapplication
+    networks:
+      - sip
+    env_file:
+      - .env
+    restart: on-failure
+
+networks:
+  sip:
