--- a/webserver/lviv.conf
+++ b/webserver/lviv.conf
@@ -4,8 +4,17 @@ upstream webapplication {
 
 server {
     listen       8080;
-    listen  [::]:8080;
     server_name  localhost;
+
+    gzip on;
+    gzip_types      text/plain application/xml application/javascript;
+    gzip_proxied    no-cache no-store private expired auth;
+    gzip_min_length 1000;
+
+    location / {
+        root   /usr/share/nginx/html;
+        try_files $uri /index.html;
+    }
 
     rewrite ^/results/(.*)$ /api/files/results/$1 last;
     rewrite ^/tiles/(.*)$ /api/files/tiles/$1 last;
@@ -19,6 +28,10 @@ server {
         include     /etc/nginx/uwsgi_params;
     }
     location /static {
+        root   /usr/share/nginx/html;
+        try_files $uri @static;
+    }
+    location @static {
         uwsgi_pass  webapplication;
         include     /etc/nginx/uwsgi_params;
     }
