--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -45,6 +45,7 @@ services:
         REACT_APP_EMAILJS_USER_ID:
         REACT_APP_AUTOLOGIN:
         REACT_APP_AUTOPASSWORD:
+        REACT_APP_TILE_LAYER:
     volumes:
       - ../data:/data
       - /etc/letsencrypt:/etc/letsencrypt
