--- a/webviewer/package.json
+++ b/webviewer/package.json
@@ -18,6 +18,8 @@
     "leaflet-editable": "^1.2.0",
     "leaflet.vectorgrid": "^1.3.0",
     "lodash-es": "^4.17.21",
+    "plotly.js": "2.20.0",
+    "plotly.js-basic-dist": "^2.20.0",
     "polished": "^4.1.2",
     "react": "^17.0.2",
     "react-datepicker": "^4.1.1",
@@ -27,6 +29,7 @@
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.0",
     "react-leaflet-draw": "^0.19.8",
+    "react-plotly.js": "2.6.0",
     "react-range": "^1.8.9",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
