--- a/docker-compose-lviv.yml
+++ b/docker-compose-lviv.yml
@@ -45,7 +45,8 @@ services:
         REACT_APP_EMAILJS_USER_ID:
         REACT_APP_AUTOLOGIN:
         REACT_APP_AUTOPASSWORD:
-        REACT_APP_TILE_LAYER:
+        MAPBOX_ACCESS_TOKEN:
+        REACT_APP_IS_MAPBOX_AVAILABLE:
     volumes:
       - /mnt/storage/geoap_data:/data
     expose:
