ID22311: Updated path to media

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     volumes:
       - ./webapplication:/code
       - ./data:/data
+      - ./data/media:/code/media
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - db
