--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - ./webapplication:/code
       - ../data:/data
+      - ../data/media:/code/media
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DJANGO_SETTINGS_MODULE=sip.settings-prod
