ID22311: nginx conf update

--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -50,6 +50,11 @@ server {
         include     /etc/nginx/uwsgi_params;
     }
 
+    location /media {
+        uwsgi_pass  webapplication;
+        include     /etc/nginx/uwsgi_params;
+    }
+
     location /file_download {
         internal;
         alias /data;
