--- a/webserver/default.conf
+++ b/webserver/default.conf
@@ -27,4 +27,9 @@ server {
         internal;
         alias /data;
     }
+    
+    location /media {
+        uwsgi_pass  webapplication;
+        include     /etc/nginx/uwsgi_params;
+    }
 }
