--- a/webapplication/uwsgi.ini
+++ b/webapplication/uwsgi.ini
@@ -4,7 +4,7 @@ module = sip.wsgi:application
 socket = 0.0.0.0:9000
 
 static-map = /static=/code/static
-static-map = /media=/code/media
+static-map = /media=/media
 
 master = true
 single-interpreter = true
