ID22311: Added Description, Image, Domain (#387)
* ID22311: Added Description, Image, Domain

* ID22311: Updated to description_picture

* ID22311: Updated path to media

* ID22311: nginx conf update

* ID22311:updated media path

* ID22311: Added COMPONENT_DESCRIPTION_PICTURE_MEDIA_PATH

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -19,6 +19,7 @@ services:
       dockerfile: prod.Dockerfile
     volumes:
       - ../data:/data
+      - ../data/media:/media
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DJANGO_SETTINGS_MODULE=sip.settings-prod
