--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -6,7 +6,7 @@ upstream webapplication {
 
 server {
     listen 80;
-    server_name portal.soilmate.ai;
+    server_name portal.soilmate.ai agrieos.in;
 
     location / {
         return 301 https://$host$request_uri;
@@ -19,6 +19,69 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/portal.soilmate.ai/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/portal.soilmate.ai/privkey.pem;
+
+    gzip on;
+    gzip_types      text/plain application/xml application/javascript;
+    gzip_proxied    no-cache no-store private expired auth;
+    gzip_min_length 1000;
+
+    location / {
+        root   /usr/share/nginx/html;
+        try_files $uri /index.html;
+    }
+
+    rewrite ^/results/(.*)$ /api/files/results/$1 last;
+    rewrite ^/tiles/(.*)$ /api/files/tiles/$1 last;
+
+    location /api {
+        uwsgi_pass  webapplication;
+        include     /etc/nginx/uwsgi_params;
+    }
+    location /admin {
+        uwsgi_pass  webapplication;
+        include     /etc/nginx/uwsgi_params;
+    }
+    location /static {
+        root   /usr/share/nginx/html;
+        try_files $uri @static;
+    }
+    location @static {
+        uwsgi_pass  webapplication;
+        include     /etc/nginx/uwsgi_params;
+    }
+
+    location /media {
+        uwsgi_pass  webapplication;
+        include     /etc/nginx/uwsgi_params;
+    }
+
+    location /file_download {
+        internal;
+        alias /data;
+    }
+
+    location ~^/file_download/tiles/mapbox/(.*)/(.*)/(.*).png$ {
+        internal;
+        # resolver 127.0.0.11 ipv6=off;
+        resolver 8.8.8.8;
+    
+
+        proxy_set_header Cookie '';
+
+        proxy_cache MAPBOX;
+        proxy_cache_valid 200 31d;
+        proxy_cache_use_stale  error timeout http_503 http_504;
+
+        proxy_pass https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v11/tiles/$1/$2/$3?access_token=${MAPBOX_ACCESS_TOKEN};
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name  agrieos.in;
+
+    ssl_certificate /etc/letsencrypt/live/agrieos.in/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/agrieos.in/privkey.pem;
 
     gzip on;
     gzip_types      text/plain application/xml application/javascript;
