--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -17,6 +17,8 @@ services:
     build:
       context: ./webapplication
       dockerfile: prod.Dockerfile
+      args:
+        DEFAULT_SYSTEM_NOTIFICATION_EMAIL:
     volumes:
       - ../data:/data
       - ../data/media:/media
