ID22487:fixed problem with env file

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -46,6 +46,8 @@ services:
       - webapplication
     networks:
       - sip
+    env_file:
+      - .env
     restart: on-failure
 
   # https://github.com/bokysan/docker-postfix#relaying-messages-through-google-apps-account
