ID22966: Added migration and fixed requirements

--- a/webapplication/requirements.txt
+++ b/webapplication/requirements.txt
@@ -10,7 +10,7 @@ uWSGI==2.0.18
 coverage==6.3.2
 Pillow==9.5.0
 urllib3==1.26.15
-django-waffle
+django-waffle==3.0.0
 
 psycopg2==2.8.5
 invoke==1.4.1
