--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -14,7 +14,7 @@ services:
     restart: on-failure
 
   webapplication:
-    image: registry.quantumobile.co/portal_soilmate_webapplication
+    image: registry.quantumobile.co/geoap_webapplication
     volumes:
       - ../data:/data
       - ../data/media:/media
@@ -32,7 +32,7 @@ services:
     restart: on-failure
 
   webserver:
-    image: registry.quantumobile.co/portal_soilmate_webserver
+    image: registry.quantumobile.co/geoap_webserver
     volumes:
       - ../data:/data
       - /etc/letsencrypt:/etc/letsencrypt
