--- a/webviewer/package.json
+++ b/webviewer/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.6",
     "js-cookie": "^2.2.1",
+    "jszip": "^3.10.1",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
     "leaflet-editable": "^1.2.0",
