--- a/webviewer/package.json
+++ b/webviewer/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.0",
     "react-leaflet-draw": "^0.19.8",
+    "react-paginate": "^7.1.2",
     "react-plotly.js": "2.6.0",
     "react-range": "^1.8.9",
     "react-redux": "^7.2.4",
