--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -42,7 +42,14 @@ server {
     }
 
     rewrite ^/results/(.*)$ /api/files/results/$1 last;
-    rewrite ^/tiles/(.*)$ /api/files/tiles/$1 last;
+
+    location ~ ^/tiles/(.*)$ {
+        rewrite ^/tiles/(.*)$ /api/files/tiles/$1 last;
+
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
+        add_header Expires 0;
+    }
 
     location /api {
         uwsgi_pass  webapplication;
