ID27113: nginx fix

--- a/webserver/default-prod.conf.template
+++ b/webserver/default-prod.conf.template
@@ -43,18 +43,14 @@ server {
 
     rewrite ^/results/(.*)$ /api/files/results/$1 last;
 
-    location ~* \.pbf$ {
-        # No caching for .pbf files
+    location ^/tiles/(.*)$ {
         add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
         add_header Pragma "no-cache";
         add_header Expires 0;
         etag off;
 
-        rewrite ^/tiles/(.*\.pbf)$ /api/files/tiles/$1 last;
+        rewrite ^/tiles/(.*)$ /api/files/tiles/$1 last;
     }
-
-    rewrite ^/tiles/(.*)$ /api/files/tiles/$1 last;
-
 
     location /api {
         uwsgi_pass  webapplication;
